tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/virtualservice/added_header/tproxy/to_tproxy/_test_context/VirtualService.3444081199.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-20468
spec:
  hosts:
  - tproxy
  http:
  - headers:
      request:
        add:
          istio-custom-header: user-defined-value
    route:
    - destination:
        host: tproxy
